# AppDataMove

./: .gitignore  LICENSE  README.cn.md  README.md  build.bat  mannual_process_note.txt  pyproject.toml  run.bat
src/: main.py  opened_file_processing.py  utils.py
