[tool.poetry]
name = "appDataMove"
version = "0.1.0"
description = "Move app data to disk D"
authors = ["huwei901108@126.com"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.7"
pywin32 = "^310"

[tool.poetry.group.dev.dependencies]
pyinstaller = { version = "^5.13.0", python = ">=3.7,<3.13" }

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
name = "aliyun"
url = "https://mirrors.aliyun.com/pypi/simple/"
